--- a/Week1/Assignment1/index.html
+++ b/Week1/Assignment1/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <main style="display:flex;justify-content:center;">
-        <div style="background-color:red;width:1200px;height:500px;margin-top: 2rem;">
-            <h1 style="margin-top: 0rem;">Hello World</h1>
+    <main>
+        <div>
+            <h1>Hello World</h1>
          </div>
     </main>
    
